# cli

./: CMakeLists.txt  README.md
include/Commands/: Batch.h  Date.h  Echo.h  Head.h  Prompt.h  Rm.h  Time.h  Touch.h  Tr.h  Truncate.h  Wc.h
include/Core/: Interpreter.h
include/Core/CommandBase/: Command.h  CommandFactory.h  CommandWithInputArgument.h
include/Core/Factory/: CommandFactory.h
include/Core/Parser/: ParsedCommand.h  Parser.h
include/Exceptions/: InvalidOptionsException.h
src/: main.cpp
src/Commands/: Batch.cpp  Batch.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Prompt.h  Rm.cpp  Time.cpp  Time.h  Touch.cpp  Touch.h  Tr.cpp  Truncate.cpp  Truncate.h  Wc.cpp  Wc.h
src/Core/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandInvocation.h  CommandWithArguments.cpp  CommandWithArguments.h  CommandWithInputArgument.cpp  CommandWithInputArgument.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h
src/Core/Command/: Command.h  CommandFactory.cpp  CommandFactory.h  CommandWithInputArgument.cpp  CommandWithInputArgument.h
src/Core/CommandBase/: Command.h  CommandFactory.cpp  CommandFactory.h  CommandWithInputArgument.cpp  CommandWithInputArgument.h
src/Core/Factory/: CommandFactory.cpp
src/Core/Parser/: ParsedCommand.h  Parser.cpp  Parser.h
src/Exceptions/: InvalidOptionsException.cpp  ParserException.cpp  ParserException.h
